tests/transpiler/x/swift/group_by.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden840429466/021/main.swift:4:5: error: the compiler is unable to type-check this expression in reasonable time; try breaking up the expression into distinct sub-expressions
 2 | import Foundation
 3 | let people = [["name": "Alice", "age": 30, "city": "Paris"], ["name": "Bob", "age": 15, "city": "Hanoi"], ["name": "Charlie", "age": 65, "city": "Paris"], ["name": "Diana", "age": 45, "city": "Hanoi"], ["name": "Eve", "age": 70, "city": "Paris"], ["name": "Frank", "age": 22, "city": "Hanoi"]]
 4 | let stats = ({ var _groups: [String: [String: Any]] = [:]
   |     `- error: the compiler is unable to type-check this expression in reasonable time; try breaking up the expression into distinct sub-expressions
 5 | var _res: [[String: Any]] = []
 6 | for person in people {
