tests/transpiler/x/swift/group_by.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:24:01 GMT+7
import Foundation
let people = [["name": "Alice", "age": 30, "city": "Paris"], ["name": "Bob", "age": 15, "city": "Hanoi"], ["name": "Charlie", "age": 65, "city": "Paris"], ["name": "Diana", "age": 45, "city": "Hanoi"], ["name": "Eve", "age": 70, "city": "Paris"], ["name": "Frank", "age": 22, "city": "Hanoi"]]
let stats = ({ var _groups: [String: [String: Any]] = [:]
var _res: [[String: Any]] = []
for person in people {
    let _key = person["city"]!
    let _ks = String(describing: _key)
    var _g = _groups[_ks] ?? ["key": _key, "items": []]
    var _item: [String: Any] = ["__join__": true]
    _item["person"] = person
    _g["items"] = (_g["items"] as! [Any]) + [_item]
    _groups[_ks] = _g
}
var _list = Array(_groups.values)
_list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
for g in _list {
    _res.append(["city": g["key"]!, "count": (((g["items"] as! [[String: Any]]).count) as! Int), "avg_age": ((Double((({ var _res: [Any] = []
    for p in g["items"] as! [[String: Any]] {
        _res.append(p["age"]!)
    }
    return _res })()).reduce(0,+)) / Double((({ var _res: [Any] = []
    for p in g["items"] as! [[String: Any]] {
        _res.append(p["age"]!)
    }
    return _res })()).count)) as! Double)])
}
return _res })()
print("--- People grouped by city ---")
for s in stats {
    print(String(describing: s["city"]!), ": count =", String(describing: s["count"]!), ", avg_age =", String(describing: s["avg_age"]!))
}
